# nextAssist

./: .env.example  .gitignore  Dockerfile  README.md  Readme.md  app.py  docker-compose.yml  eval.py  pyproject.toml
scripts/: 0-getDocs.ipynb  1-extractDocs.ipynb  2-processDocs.ipynb  extractDocs.py  getDocs.py  index.py  nextUtil.py  processDocs.py  queries.py  snowSetup.py
src/: CortexSearchRetriever.py  RAGQueryEngine.py  SimpleRAG.py  SnowflakeEmbedding.py  SnowflakeLLM.py  config.py  prompts.py  retriever.py
tests/: test.json
